# wc2026-winner

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: streamlit_app.py
data/manual/: groups_2026.csv
data/processed/: round_probabilities.csv  team_strength.csv  validation_metrics.csv  validation_team_rankings.csv  winner_probabilities.csv
data/raw/: README.md
data/sample/: results_sample.csv
reports/: model_comparison.md  summary.md  validation_report.md
src/wc_predictor/: __init__.py  data.py  elo.py  features.py  model.py  report.py  run_pipeline.py  simulate.py  validate.py
