[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-2026-predictor"
version = "0.1.0"
description = "Predict the FIFA World Cup 2026 winner from public international football data."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "streamlit>=1.31",
]

[tool.setuptools.packages.find]
where = ["src"]

